--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -39,6 +39,12 @@ jobs:
           ruby-version: '3.1' # Not needed with a .ruby-version file
           bundler-cache: true # runs 'bundle install' and caches installed gems automatically
           cache-version: 0 # Increment this number if you need to re-download cached gems
+      - name: Replace URL
+        uses: anoelsm.github.io/anoelsm.github.io
+        with:
+          find: "http://localhost:8000"
+          replace: "https://myPage.github.io"
+          regex: false
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v4
