--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -39,12 +39,6 @@ jobs:
           ruby-version: '3.1' # Not needed with a .ruby-version file
           bundler-cache: true # runs 'bundle install' and caches installed gems automatically
           cache-version: 0 # Increment this number if you need to re-download cached gems
-      - name: Replace URL
-        uses: anoelsm.github.io/anoelsm.github.io
-        with:
-          find: "http://localhost:8000"
-          replace: "https://myPage.github.io"
-          regex: false
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v4
@@ -61,7 +55,7 @@ jobs:
   deploy:
     environment:
       name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
+      url: ${{ steps.deployment.outputs.base_path }}
     runs-on: ubuntu-latest
     needs: build
     steps:
