--- a/_config.yml
+++ b/_config.yml
@@ -1,29 +1,29 @@
 # Site settings
-title: Testing
-subtitle: by HTML5 UP
-email: youremailaddress@gmail.com
-description: A FREE AND FULLY RESPONSIVE SITE TEMPLATE
-baseurl: "/editorial-jekyll-theme" # the subpath of your site, e.g. /blog
+title: Alaina N. Smith
+subtitle: Oceanographer & Data Analyst | Data Visualizer | R Guru | Woodworker
+email: anoelsm@gmail.com
+description: 
+baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site
 author:
-street_address: 1234 Somewhere Road
-city: Nashville
-state: TN
-zip_code: 55555
+street_address:
+city: San Diego
+state: CA
+zip_code: 92102
 country: United States of America
-phone: (716) 555-5555
+phone: 
 
 # Social settings
 500px_url:
 facebook_url:
-github_url:
-gitlab_url: https://gitlab.com/u/andrewbanchich
-googleplus_url: https://plus.google.com/u/0/+AndrewBanchich
-instagram_url: https://instagram.com
-linkedin_url: https://www.linkedin.com/in/andrew-banchich-a4ba1195
+github_url: https://github.com/anoelsm
+gitlab_url: 
+googleplus_url: 
+instagram_url: 
+linkedin_url: https://www.linkedin.com/in/alaina-noel-smith/
 pinterest_url:
 slack_url:
-twitter_url: https://twitter.com/andrewbanchich
+twitter_url: https://twitter.com/phytoplasmith
 
 # Build settings
 markdown: kramdown
