--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Alaina N. Smith
 subtitle: Oceanographer & Data Analyst | Data Visualizer | R Guru | Woodworker
 email: anoelsm@gmail.com
-description: 
+description: Alaina N. Smith, Ph.D.
 baseurl: "/home" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site
 author:
