--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: Alaina N. Smith
-subtitle: Oceanographer & Data Analyst | Data Visualizer | R Guru | Woodworker
+subtitle: Oceanographer | Data Scientist | R Guru
 email: anoelsm@gmail.com
 description: Alaina N. Smith, Ph.D.
 baseurl: "/home" # the subpath of your site, e.g. /blog
