--- a/_config.yml
+++ b/_config.yml
@@ -9,9 +9,9 @@ author:
 street_address:
 city: San Diego
 state: CA
-zip_code: 92102
+zip_code: 92106
 country: United States of America
-phone: 
+phone: +1 571-425-0046
 
 # Social settings
 500px_url:
@@ -19,7 +19,7 @@ facebook_url:
 github_url: https://github.com/anoelsm
 gitlab_url: 
 googleplus_url: 
-instagram_url: 
+instagram_url: https://www.instagram.com/theofficialalainasmith
 linkedin_url: https://www.linkedin.com/in/alaina-noel-smith/
 pinterest_url:
 slack_url:
