--- a/_config.yml
+++ b/_config.yml
@@ -24,6 +24,7 @@ linkedin_url: https://www.linkedin.com/in/alaina-noel-smith/
 pinterest_url:
 slack_url:
 twitter_url: https://twitter.com/phytoplasmith
+google_scholar_url: https://scholar.google.com/citations?user=0ez60bsAAAAJ&hl=en&authuser=1
 
 # Build settings
 markdown: kramdown
