--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@ title: Alaina N. Smith
 subtitle: Oceanographer | Data Scientist | R Guru
 email: anoelsm@gmail.com
 description: Alaina N. Smith, Ph.D.
-baseurl: "/home" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "anoelsm.github.io" # the base hostname & protocol for your site
 author:
 street_address:
 city: San Diego
